# accumulation

./: AUTHORS  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: scaling-as.rs  scaling-nark.rs  scaling-pc.rs  scaling-snarks-bls12-381.rs
examples_bak/: scaling-pc.rs
src/: constraints.rs  data_structures.rs  error.rs  lib.rs
src/agm_as/: data_structures.rs  mod.rs
src/dl_as/: data_structures.rs  mod.rs
src/dl_as/constraints/: data_structures.rs  mod.rs
src/hc_as/: data_structures.rs  mod.rs
src/hc_as/constraints/: data_structures.rs  mod.rs
src/hp_as/: data_structures.rs  mod.rs
src/hp_as/constraints/: data_structures.rs  mod.rs
src/ipa_as/: data_structures.rs  mod.rs
src/ipa_as/constraints/: data_structures.rs  mod.rs
src/ipa_pc_as/: data_structures.rs  mod.rs
src/ipa_pc_as/constraints/: data_structures.rs  mod.rs
src/lh_as/: constraints.rs  data_structures.rs  mod.rs
src/lh_as/constraints/: data_structures.rs  mod.rs
src/marlin_pc_as/: data_structures.rs  mod.rs
src/marlin_pc_as/constraints/: data_structures.rs  mod.rs
src/nark_as/: data_structures.rs  mod.rs
src/nark_as/constraints/: data_structures.rs  mod.rs
src/nark_as/r1cs_nark/: data_structures.rs  mod.rs
src/r1cs_nark/: data_structures.rs  mod.rs
src/r1cs_nark_as/: data_structures.rs  mod.rs
src/r1cs_nark_as/constraints/: data_structures.rs  mod.rs
src/r1cs_nark_as/r1cs_nark/: data_structures.rs  mod.rs
src/trivial_pc/: data_structures.rs  mod.rs
src/trivial_pc_as/: data_structures.rs  mod.rs
src/trivial_pc_as/constraints/: data_structures.rs  mod.rs
tests/: common.rs
