[package]
name = "ark-accumulation"
version = "0.1.0"
authors = [
  "Benedikt Bünz <benedikt@cs.stanford.edu>",
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "William Lin <will.lin@berkeley.edu>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Nicholas Spooner <nick.spooner@berkeley.edu>",
]
edition = "2018"

[dependencies]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit", branch = "accumulation-experimental", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-snark = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge/", branch = "experimental", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
blake2 = { version = "0.9.1" }
derivative = { version = "2.1.1", features = [ "use_core" ] }
digest = { version = "0.9.0" }
rand_core = { version = "0.5", default-features = false }

# Dependencies for r1cs
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", branch = "main", default-features = false, optional = true }
ark-nonnative-field = { git = "https://github.com/arkworks-rs/nonnative", default-features = false, optional = true }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false, optional = true }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }

# Dependencies for parallel
rayon = { version = "1", optional = true }

[dev-dependencies]
ark-pallas = { git = "https://github.com/arkworks-rs/curves", features = [ "r1cs", "curve" ] }
rand = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2", default-features = false, features = [ "registry" ] }

[features]
default = [ "r1cs", "std" ]

parallel = [ "std", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel",
             "ark-poly-commit/parallel", "ark-std/parallel", "rayon" ]

print-trace = [ "ark-poly-commit/print-trace", "ark-std/print-trace" ]

r1cs = [ "ark-crypto-primitives/r1cs", "ark-nonnative-field", "ark-poly-commit/r1cs",
         "ark-relations", "ark-r1cs-std", "ark-sponge/r1cs", "tracing" ]

std = [ "ark-crypto-primitives/std", "ark-ec/std", "ark-ff/std", "ark-nonnative-field/std",
        "ark-poly/std", "ark-poly-commit/std", "ark-relations/std", "ark-r1cs-std/std",
        "ark-serialize/std", "ark-sponge/std", "ark-std/std" ]

# Accumulation scheme implementations
impl = []
hp-as = [ "impl" ]
ipa-pc-as = [ "impl" ]
r1cs-nark-as = [ "hp-as", "impl", "r1cs" ]
trivial-pc-as = [ "impl" ]

[[example]]
name = "scaling-as"
required-features = [ "hp-as", "ipa-pc-as", "r1cs-nark-as", "trivial-pc-as" ]

[[example]]
name = "scaling-nark"
required-features = [ "hp-as", "r1cs-nark-as" ]

[[example]]
name = "scaling-pc"
required-features = [ "ipa-pc-as" ]
